--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
+  "engines": {
+    "node": ">=10",
+    "pnpm": ">=3"
+  },
   "dependencies": {
+    "axios": "^1.6.8",
+    "element-plus": "^2.7.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
