--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pnpm": ">=3"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.8",
     "element-plus": "^2.7.2",
     "pinia": "^2.1.7",
